--- a/slider.css
+++ b/slider.css
@@ -1,6 +1,8 @@
-.slider {
-  width: 370px; height: 355px;
+.slider, .slider2, .slider3 {
+  width: 200px;
+  height: 200px;
   overflow: hidden;
+  
   /*margin: 0 auto;*/
 }
 
@@ -13,12 +15,52 @@
   -o-transition: 0.5s left;
 
   list-style: none;
-  margin: 0; padding: 0;
+  margin: 0; 
+  padding: 0;
+}
+
+.slider2 > ul {
+  /* styled by JS to match the added width and height of all <li>’s */
+  position: relative;
+  -webkit-transition: 0.5s right;
+  -moz-transition: 0.5s right;
+  -ms-transition: 0.5s right;
+  -o-transition: 0.5s right;
+
+  list-style: none;
+  margin: 0; 
+  padding: 0;
+}
+
+.slider3 > ul {
+  /* styled by JS to match the added width and height of all <li>’s */
+  position: relative;
+  -webkit-transition: 0.5s left;
+  -moz-transition: 0.5s left;
+  -ms-transition: 0.5s left;
+  -o-transition: 0.5s left;
+
+  list-style: none;
+  margin: 0; 
+  padding: 0;
 }
 
 .slider > ul > li {
   float: left;
-  width: 370px; height: 355px;
+  width: 200px; 
+  height: 200px;
+}
+
+.slider2 > ul > li {
+  float: left;
+  width: 200px; 
+  height: 200px;
+}
+
+.slider3 > ul > li {
+  float: left;
+  width: 200px; 
+  height: 200px;
 }
 
 .slider-nav {
